--- a/BookStore.Infrastructure/BookStore.Infrastructure.Data.csproj
+++ b/BookStore.Infrastructure/BookStore.Infrastructure.Data.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BookStore.Application\BookStore.Application.csproj" />
     <ProjectReference Include="..\BookStore.Domain\BookStore.Domain.csproj" />
   </ItemGroup>
 
