--- a/BookStore.Application/BookStore.Application.csproj
+++ b/BookStore.Application/BookStore.Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookStore.Domain\BookStore.Domain.csproj" />
+    <ProjectReference Include="..\BookStore.Infrastructure\BookStore.Infrastructure.Data.csproj" />
+  </ItemGroup>
+
 </Project>
