[ADD] add setting

--- a/BookStore.Api/appsettings.json
+++ b/BookStore.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "BookStoreConnection": "Server=.;Database=BookStore;Trusted_Connection=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
