[ADD] add JWT and add Attribute [Authorize] for all controller expect login and register

--- a/BookStore.Api/appsettings.json
+++ b/BookStore.Api/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtConfig": {
+    "Secret": "wauporbijpvndbfbrznoubhmhufgajhx"
+  }
   "AllowedHosts": "*"
 }
