--- a/BookStore.Api/BookStore.Api.csproj
+++ b/BookStore.Api/BookStore.Api.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
     <PackageReference Include="Swashbuckle" Version="5.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.Text.Encoding" Version="4.0.11" />
   </ItemGroup>
 
   <ItemGroup>
